k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: groupe4-al1
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
